--- a/code/train_mapping.html
+++ b/code/train_mapping.html
@@ -8,9 +8,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Dela+Gothic+One&family=Rampart+One&display=swap" rel="stylesheet">
         <script src="https://kit.fontawesome.com/44a594eacc.js" crossorigin="anonymous"></script>
         <script defer src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
-        <!-- <script defer src="js/map.js"></script> -->
-        <script defer src="js/map_demo.js"></script>
-        <!-- <script defer src="js/callingpoints.js"></script> -->
+        <script defer src="js/map.js"></script>
         <script src="https://unpkg.com/@googlemaps/markerclusterer/dist/index.min.js"></script>
     </head>
     <body>
@@ -20,15 +18,15 @@
       <main>
         <div id="map" class="map"></div>
         <div id="infoModal" class="modal">
-            <div class="modal-content">
-              <div class="modal-header">
-                <span class="close"><i class="fa-solid fa-xmark"></i></span>
-                <h2>Train Service Information</h2>
-              </div>
-              <div class="modal-body" id="trainModalBody">
-              </div>
+          <div class="modal-content">
+            <div class="modal-header">
+              <span class="close"><i class="fa-solid fa-xmark"></i></span>
+              <h2>Train Service Information</h2>
+            </div>
+            <div class="modal-body" id="trainModalBody">
             </div>
           </div>
+        </div>
       </main>
     </body>
 </html>
